2010-09-09  Ryosuke Niwa  <rniwa@webkit.org>

Reviewed by Eric Seidel.

        REGRESSION: applying new font size causes font-size outside selection to change
        https://bugs.webkit.org/show_bug.cgi?id=45026

        The regression was caused by removeImplicitlyStyledElement not converting font size to CSS value properly.
        Namely, it was treating font size as a pixel value for font-size property.  Fixed this by adding fontSizeToCSSValue
        which uses HTMLFontElement::cssValueFromFontSizeNumber and deployed it in removeImplicitlyStyledElement

        Also fixed a bug in StyleChange::extractTextStyles that it ignores font-size property when the values were
        relative terms such as x-small and -webkit-xxx-large. And replaced the logic to convert from pixel font size
        to legacy font size by CSSStyleSelector::legacyFontSize.

        Test: editing/style/push-down-font-styles.html

        * editing/ApplyStyleCommand.cpp:
        (WebCore::StyleChange::extractTextStyles): Fixed a bug. See above.
        (WebCore::stringToCSSValue): Converts string to CSSValue.
        (WebCore::fontSizeToCSSValue): Converts font size number (String) to CSSPrimitiveValue.
        (WebCore::ApplyStyleCommand::removeImplicitlyStyledElement): Calls stringToCSSValue and fontSizeToCSSValue.
        * css/CSSStyleSelector.h: Made fontSizeForKeyword public.
2010-09-09  Kent Tamura  <tkent@chromium.org>

        Unreviewed, test expectation update.

        The baseline image was wrong.  It was exposed by r45431.
        https://bugs.webkit.org/show_bug.cgi?id=45431

        * platform/chromium-linux/svg/dynamic-updates/SVGFEDiffuseLightingElement-lighting-color-css-prop-expected.checksum:
        * platform/chromium-linux/svg/dynamic-updates/SVGFEDiffuseLightingElement-lighting-color-css-prop-expected.png:
        * platform/chromium/test_expectations.txt:


Canonical link: https://commits.webkit.org/57881@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67145 268f45cc-cd09-0410-ab3c-d52691b4dbfc